Re-made readme for more comprehensive specification and instruction, deleted activate.bat redundant